include $(top_srcdir)/common.am

sbin_PROGRAMS = famd

famd_SOURCES = \
  Activity.c++ \
  Activity.h \
  Client.c++ \
  Client.h \
  ClientConnection.c++ \
  ClientConnection.h \
  ClientInterest.c++ \
  ClientInterest.h \
  Cred.c++ \
  Cred.h \
  DirEntry.c++ \
  DirEntry.h \
  Directory.c++ \
  Directory.h \
  DirectoryScanner.c++ \
  DirectoryScanner.h \
  Event.c++ \
  Event.h \
  File.c++ \
  File.h \
  FileSystem.c++ \
  FileSystem.h \
  FileSystemTable.c++ \
  FileSystemTable.h \
  IMon.c++ \
  IMon.h \
  Interest.c++ \
  Interest.h \
  InternalClient.c++ \
  InternalClient.h \
  Listener.c++ \
  Listener.h \
  LocalClient.c++ \
  LocalClient.h \
  LocalFileSystem.c++ \
  LocalFileSystem.h \
  Log.c++ \
  Log.h \
  MxClient.c++ \
  MxClient.h \
  NFSFileSystem.c++ \
  NFSFileSystem.h \
  NetConnection.c++ \
  NetConnection.h \
  Pollster.c++ \
  Pollster.h \
  Request.h \
  RequestMap.h \
  RPC_TCP_Connector.c++ \
  RPC_TCP_Connector.h \
  Scanner.c++ \
  Scanner.h \
  Scheduler.c++ \
  Scheduler.h \
  ServerConnection.c++ \
  ServerConnection.h \
  ServerHost.c++ \
  ServerHost.h \
  ServerHostRef.c++ \
  ServerHostRef.h \
  Set.h \
  SmallTable.h \
  StringTable.h \
  TCP_Client.c++ \
  TCP_Client.h \
  main.c++ \
  timeval.c++ \
  timeval.h \
  @MONITOR_FUNCS@.c++

EXTRA_famd_SOURCES = IMonIrix.c++ IMonLinux.c++ IMonNone.c++

